# vetc

./: README.md
cad_models/: README.md
custom_msg/: CMakeLists.txt  package.xml
custom_msg/msg/: mpc_to_nlp.msg
custom_msgs/: README.md
custom_msgs/msg/: sf_to_mpc.msg
custom_msgs/srv/: mpc_bw_nlp.srv
documents/: Building Error, Message  Building Manual  CPPAD version  Controller Spec Sheet  Quick Building, Q&A  README.md  URL links  環境構築メモ
documents/CppAD Dialy/: 2023_4_11  2023_4_12  2023_8_1
mpc_controller/: CMakeLists.txt  README.md  package.xml
mpc_controller/include/: mpc_controller.hpp
mpc_controller/launch/: mpc.launch
mpc_controller/src/: main.cpp  mpc_controller.cpp
nlp_solver/: CMakeLists.txt  README.md  package.xml
nlp_solver/include/: nlp_solver (コピー).hpp  nlp_solver.hpp
nlp_solver/src/: main.cpp  nlp_solver (コピー).cpp  nlp_solver.cpp  test_eigen.cpp  throttle.cpp  throttle.h
pwm_generator/: README.md
sensor_filter/: README.md
visualizer/: README.md
visualizer/config/: vetc_display.rviz  vtec.yaml
