<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>0.0.1</version>
  <description>custom_msgs package</description>
  <maintainer email="miyatani_koki@outlook.jp">miyatani koki</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
