<?xml version="1.0"?>
<package format="2">
  <name>nlp_solver</name>
  <version>0.0.0</version>
  <description>The nlp_solver package</description>

  <maintainer email="miyatani_koki@outlook.jp">MIYATANIKoki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>custom_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <build_export_depend>custom_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <exec_depend>custom_msgs</exec_depend>

</package>
